# widy

./: LICENSE-AGPL  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-to-auto-release.yml
scr-auc-fighter-adapter/: main.tsx
shared/: enums.ts
shared/components/: DonationMessageCard.tsx  FollowMessageCard.tsx  RaidMessageCard.tsx  SubscriptionMessageCard.tsx  Widget.tsx
shared/slices/: servicesSlice.ts  timerSlice.ts
shared/translation/: ar.json  de.json  en.json  es.json  fr.json  hi.json  pt.json  ru.json  ua.json  zh.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dist-widget/: widget.js
src-tauri/entity/src/: service.rs  settings.rs  widget.rs
src-tauri/migration/src/: lib.rs  m20250324_221133_create_table_settings.rs  m20250325_185301_add_default_alert.rs  m20250325_185310_add_default_settings.rs  m20260308_122456_add_donatello_service.rs  m20260308_122513_add_donatik_service.rs  m20260310_224044_add_column_tts_type_tts_settings_to_settings.rs  m20260318_195439_create_table_widgets.rs
src-tauri/src/: lib.rs
src-tauri/src/commands/: init.rs  mod.rs  twitch_connect.rs  update_widget.rs
src-tauri/src/enums/: app_event.rs
src-tauri/src/repositories/: settings_repository.rs  widgets_repository.rs
src-tauri/src/services/: axum_service.rs  donation_alerts_service.rs  stream_labs_service.rs  telegram_service.rs  tts_service.rs  twitch_service.rs  widy_sol_service.rs
src-tauri/src/utils/: download_widget.rs  mod.rs  on_new_donation.rs
src-widget/api/: alertsApi.ts  aucFighterApi.ts  goalsApi.ts  index.ts  messagesApi.ts  settingsApi.ts  widgetsApi.ts
src-widget/hooks/: useInboundBridge.ts
src-widget/store/: index.ts
src/api/: widgetsApi.ts
src/components/: AuthorizationView.tsx  AuthorizationWithStreamElements.tsx  NavigateBackButton.tsx  YouCanFindByUrl.tsx
src/components/dashboard/: DashboardSidebar.tsx
src/components/dashboard/components/auction/components/: Timer.tsx
src/components/dashboard/components/info/: Info.tsx
src/components/dashboard/components/widgets/components/: AddWidget.tsx  AllWidgets.tsx  InstalledWidgetCard.tsx  InstalledWidgets.tsx  WidgetCard.tsx  WidgetWarning.tsx
src/components/donatello/: Donatello.tsx
src/components/donatik/: Donatik.tsx
src/components/donationalerts/components/: Token.tsx
src/components/services/: ServicesSettings.tsx
src/components/streamelements/components/: Token.tsx
src/components/streamlabs/components/: Token.tsx
src/routes/: dashboardRouts.tsx
src/store/: index.ts
